src/objects/RegionKinCare__c.object
<CustomObject>
    <description>List of location information driven by State, Postcode and Suburb</description>
    <fields>
        <fullName>ACARRegion__c</fullName>
        <label>ACAR Region</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery Area</fullName>
                </value>
                <value>
                    <fullName>Post Office Boxes</fullName>
                </value>
                <value>
                    <fullName>LVR (Large Volume Receiver)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments from Australia Post</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                    <default>true</default>
                    <label>Australia</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FACSDistrict__c</fullName>
        <description>Family And Community Services(NSW Only)</description>
        <inlineHelpText>Family And Community Services(NSW Only)</inlineHelpText>
        <label>FACS District</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HACCRegion__c</fullName>
        <label>HACC Region</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HealthPlanningRegion__c</fullName>
        <description>Health Planning Region for Transpac</description>
        <label>Health Planning Region</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LGARegion__c</fullName>
        <description>Local Government Region</description>
        <label>LGA Region</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PostCode__c</fullName>
        <description>Post Code list from Australia</description>
        <label>Post Code</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionLookup__c</fullName>
        <description>Lookup reference for location of person and organisation</description>
        <label>Region Lookup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>List of Australian States</description>
        <inlineHelpText>Please select a State</inlineHelpText>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>NSW</fullName>
                </value>
                <value>
                    <fullName>ACT</fullName>
                </value>
                <value>
                    <fullName>QLD</fullName>
                </value>
                <value>
                    <fullName>VIC</fullName>
                </value>
                <value>
                    <fullName>TAS</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>WA</fullName>
                </value>
                <value>
                    <fullName>NT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <label>Suburb</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TelstraCNA__c</fullName>
        <description>Telstra Call Node Area. A group of Telstra exchanges</description>
        <label>Telstra CNA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TelstraExchange__c</fullName>
        <description>Telstra phone exchange</description>
        <label>Telstra Exchange</label>
        <type>TextArea</type>
    </fields>
    <label>Region KinCare</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RegionsKinCare</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>